# BlackHole

./: CMakeLists.txt  README.md
app/: main.cpp
include/simulation/controllers/: camera.hpp  cubeMap.hpp  mainController.hpp  mesh.hpp
include/simulation/controllers/shaders/: blackHoleShader.hpp  shader.hpp  skyboxShader.hpp
resources/textures/space/: readme.txt
shaders/: blackHoleShader.frag  blackHoleShader.vert  skyBoxShader.vert
src/: CMakeLists.txt
src/simulation/: window.cpp
src/simulation/controllers/: camera.cpp  cubeMap.cpp  mainController.cpp  mesh.cpp
src/simulation/controllers/shaders/: shader.cpp
